# spec-kit

./: .gitignore  AGENTS.md  README.md  TEAM-README.md  TEMP-issue-notes.md  pyproject.toml
checklist-rules/: bugfix.yml  common.yml  migration.yml  new-feature.yml  tooling.yml
config/: automation-rules.yml
extensions/: catalog.json
presets/: catalog.json
presets/lean/: README.md  preset.yml
scripts/bash/: automation-common.sh  check-prerequisites.sh  collect-fact-layer.sh  collect-workflow-facts.sh  common.sh  complete-spec-branches.sh  create-spec-branch.sh  ensure-desktop-shell-cdp-host.sh  generate-acceptance-skeleton.sh  inspect-affected-repos.sh  inspect-commit-scope.sh  inspect-delivery-facts.sh  inspect-desktop-shell-cdp-target.sh  inspect-package-sync.sh  inspect-source-artifact-consistency.sh  inspect-untracked-noise.sh  normalize-workflow-state.sh  parse-promotion-candidates.sh  select-knowledge.sh  setup-plan.sh  setup-tasks.sh  suggest-validation.sh  sync-ui-runtime-artifacts.sh  validate-checklist-rules.sh  validate-checklist.sh  validate-commit-message.sh  validate-fact-layer-gate.sh  validate-feature-artifacts.sh  validate-generated-context.sh  validate-implementation-slices.sh  validate-knowledge-index.sh  validate-root-cause-structure.sh
scripts/powershell/: apply-knowledge-pack.ps1  automation-common.ps1  bootstrap-knowledge.ps1  bump-spec-kit-version.ps1  capture-cdp-screenshot.ps1  cdp-common.ps1  check-prerequisites.ps1  cleanup-host-cdp.ps1  collect-fact-layer.ps1  collect-knowledge-bootstrap-facts.ps1  collect-workflow-facts.ps1  collect-workflow-observer-packet.ps1  common.ps1  compare-knowledge-pack-equivalence.ps1  complete-spec-branches.ps1  compose-knowledge-packs.ps1  configure-mcp-agents.ps1  create-spec-branch.ps1  ensure-desktop-shell-cdp-host.ps1  ensure-host-cdp.ps1  evaluate-knowledge-pack-synthesis.ps1  export-knowledge-pack.ps1  generate-acceptance-skeleton.ps1  generate-knowledge-pack.ps1  get-spec-kit-version.ps1  init.ps1  inspect-affected-repos.ps1  inspect-commit-scope.ps1  inspect-delivery-facts.ps1  inspect-desktop-shell-cdp-target.ps1  inspect-host-cdp-target.ps1  inspect-package-sync.ps1  inspect-plugin-build-plan.ps1  inspect-source-artifact-consistency.ps1  inspect-untracked-noise.ps1  inspect-validation-capabilities.ps1  inspect-workflow-closure.ps1  inspect-workspace-repositories.ps1  install-hook-tools.ps1  install-knowledge-pack.ps1  (+41 more)
scripts/python/: check_prerequisites.py  common.py
src/specify_cli/: __init__.py  _assets.py  _console.py  _hooks.py  _knowledge.py  _project_status.py  _upgrade.py  _utils.py  _version.py  agents.py  catalogs.py  extensions.py  integration_state.py  presets.py  shared_infra.py
templates/: acceptance-rubric-template.md  agents-template.md  checklist-template.md  constitution-template.md  fact-pack-template.md  implementation-summary-template.md  intake-template.md  layer-manifest.yml  pitfalls-template.md  plan-template.md  quality-vision-template.md  repository-map-template.md  spec-template.md  tasks-template.md  workflow-state-template.json  workpack-template.md  workspace-template.yml
templates/commands/: acceptance-rubric.md  acceptance.md  ai-self-acceptance.md  (+30 more)
tests/: test_checklist_quality_assets.py  test_human_review_summary_templates.py  test_layered_sdd_structure.py  test_python_check_prerequisites.py  test_spec_automation_scripts.py  test_spec_delivery_workflow.py  test_upstream_alignment_metadata.py  test_workflow_engine_upstream_alignment.py
workflows/: catalog.json
(+72 files in other folders)
